@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.468 2007/02/05 12:35:46 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.469 2007/02/06 10:00:24 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -72,6 +72,8 @@ PH/13 Added ${rfc2047d: to decoded RFC 2047 strings.
 PH/14 Added log_selector = +pid.
 
 PH/15 Flush SMTP output before delaying, unless control=no_delay_flush is set.
+
+PH/16 Add ${if forany and ${if forall.
 
 
 Exim version 4.66
